# ActWarden-mlx

./: Makefile  README.md
actwarden/: .gitignore
actwarden/docker/: Dockerfile.linux-cpu  Dockerfile.linux-cuda
actwarden/examples/: toy_agent.py
actwarden/feature_spec/: v1.json
actwarden/fixtures/golden/: runaway_loop.features.json
actwarden/fixtures/traces/: runaway_loop.jsonl
actwarden/python/: pyproject.toml
actwarden/python/actwarden/: __init__.py  features.py  instrument.py  model.py  replay.py  traces.py
actwarden/python/tests/: test_audit_and_instrument.py  test_feature_parity.py
actwarden/runtime/: CMakeLists.txt
actwarden/runtime/include/actwarden/: feature_packer.h  policy.h  scorer.h  span.h
actwarden/runtime/src/: audit.cpp  audit.h  feature_packer.cpp  ingest.cpp  main.cpp  policy.cpp  scorer.cpp  scorer_disabled.cpp
docs/architecture/: overview.md
