[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "actwarden"
version = "0.1.0"
description = "Training, export, and offline evaluation plane for ActWarden, a learned runtime governor for AI agents. Serving is C++ (see actwarden/runtime)."
requires-python = ">=3.10"
license = { text = "MIT" }

# Core (traces, features, replay) is stdlib-only on purpose: parity tests must run
# on any CI box. MLX is only needed to train/export.
dependencies = []

[project.optional-dependencies]
train = ["mlx>=0.30"]
dev = ["pytest>=7"]

[tool.setuptools.packages.find]
include = ["actwarden*"]
